--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-md-6 align-self-center">
-				
+				<%= title %>
 				<!-- <div class="circle-1"></div> -->
 				<table>
 					<% for(var i=0; i < continents.length; i++) { %>
