--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,39 +11,39 @@
 </header>
 
 <main>
-
+	<br>
+	<br>
+	<br>
+	<br>
 	<div class="container" style="max-width:550px;">
 		<div class="row justify-content-center box-bg-container">
 			<div class="col-md-12">
 				<div style="max-width:400px;margin:auto;padding-bottom:20px;">
 	
+					<form class="custom-frm" method="POST" action="/login">
+						<div class="form-group row">
+							<!-- <label for="email">E-Mail Address</label> -->
+							<input id="email" type="text" class="form-control" name="email" placeholder="E-Mail Address" value="" required autofocus>
+						</div>
 						
-						
-						<form class="custom-frm" method="POST" action="/login">
-	
-							
-							<div class="form-group row">
-                                <label for="email">E-Mail Address</label>
-                                <input id="email" type="text" class="form-control" name="email" value="" required autofocus>
+						<div class="form-group row">
+							<!-- <label for="password">Password</label> -->
+							<input id="password" type="password" class="form-control" name="password" placeholder="Password" required>
+						</div>
+
+						<div class="form-group row mb-0">
+							<div class="col-md-12 ">
+								<button type="submit" class="btn btn-primary btn-rounded-primary" style="padding-left:40px;padding-right:40px;">
+									Login
+								</button>
+
+								<a class="btn btn-link" style="color:#000;font-weight:600;" href="#">
+									Forgot Your Password?
+								</a>
 							</div>
-							
-							<div class="form-group row">
-								<label for="password">Password</label>
-								<input id="password" type="password" class="form-control" name="password" required>
-							</div>
-	
-							<div class="form-group row mb-0">
-								<div class="col-md-12 ">
-									<button type="submit" class="btn btn-primary btn-rounded-primary" style="padding-left:40px;padding-right:40px;">
-										Login
-									</button>
-	
-									<a class="btn btn-link" style="color:#000;font-weight:600;" href="#">
-										Forgot Your Password?
-									</a>
-								</div>
-							</div>
-						</form>
+						</div>
+					</form>
+
 				</div>
 			</div>
 			<br>
@@ -64,6 +64,8 @@
 <footer>
     <%- include('partials/footer'); %>
 </footer>
+
+<%- include('partials/footer-scripts'); %>
 
 </body>
 </html>
