--- a/views/public/login.ejs
+++ b/views/public/login.ejs
@@ -20,10 +20,10 @@
 			<div class="col-md-12">
 				<div style="max-width:400px;margin:auto;padding-bottom:20px;">
 	
-					<form class="custom-frm" method="POST" action="/login">
+					<form id="login-from" class="custom-frm" method="POST" action="/login">
 						<div class="form-group row">
 							<!-- <label for="email">E-Mail Address</label> -->
-							<input id="email" type="text" class="form-control" name="email" placeholder="E-Mail Address" value="" required autofocus>
+							<input id="username" type="text" class="form-control" name="email" placeholder="E-Mail Address" value="" required autofocus>
 						</div>
 						
 						<div class="form-group row">
