--- a/views/researcher/tasks.ejs
+++ b/views/researcher/tasks.ejs
@@ -25,44 +25,20 @@
                     <div class="col-md-12" style="margin-bottom:20px;">    
                         <h2>My Task</h2>
         
-                        <h3 class="text-center">Completion Date November 1, 2020</h3>
+                        <h3 class="text-center">Completion Date <%= task.completion_date %></h3>
                         <ul class="task-list">
+                            <% task.details.forEach(function(detail,key) { %>
                             <li>
                                 <div class="card card-b">
                                     <div class="card-body">
-                                        <h4 class="card-title"><span class="numLabel">1</span>Task Name<span class="task-status review">For Review</span></h4>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <h4 class="card-title"><span class="numLabel"><%=(key + 1)%></span><%=detail.task_name%><span class="task-status <%=detail.status%>"><%=detail.status%></span></h4>
+                                        <p class="card-text"><%=detail.task_description%></p>
                                         <a href="#" class="btn btn-primary">This Task</a>
                                     </div>
                                 </div>
                             </li>
-                            <li>
-                                <div class="card card-b">
-                                    <div class="card-body">
-                                        <h4 class="card-title"><span class="numLabel">2</span>Task Name<span class="task-status on-going">On-going</span></h4>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                        <a href="#" class="btn btn-primary">This Task</a>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="card card-b">
-                                    <div class="card-body">
-                                        <h4 class="card-title"><span class="numLabel">3</span>Task Name<span class="task-status pending">Pending</span></h4>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                        <a href="#" class="btn btn-primary">This Task</a>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="card card-b">
-                                    <div class="card-body">
-                                        <h4 class="card-title"><span class="numLabel">4</span>Task Name<span class="task-status hold">Hold</span></h4>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                        <a href="#" class="btn btn-primary">This Task</a>
-                                    </div>
-                                </div>
-                            </li>
+                            <% }) %>
+
                         </ul>
                     </div>
         
