--- a/views/partials/nav-common.ejs
+++ b/views/partials/nav-common.ejs
@@ -95,6 +95,6 @@
 </div> 
 <ul class="header-nav">
     <li class="nav-item">
-        <a href="http://trademarkers.staging.test/login" class="nav-link">Login</a>
+        <a href="/login" class="nav-link">Login</a>
     </li>
 </ul>
