--- a/views/partials/researcher_header.ejs
+++ b/views/partials/researcher_header.ejs
@@ -5,17 +5,7 @@
         </div>
 
         <ul class="nav navbar-nav navbar-right">
-            
-            <li><a class="dropdown-item" href="{{ route('logout') }}"
-                onclick="event.preventDefault();
-                                document.getElementById('logout-form').submit();">
-                    <span class="glyphicon glyphicon-log-out"></span>Logout</a>
-                </a>
-
-                <form id="logout-form" action="{{ route('logout') }}" method="POST" style="display: none;">
-                    @csrf
-                </form>
-            </li>
+           <li><a href="/login">Logout</a></li>
         </ul>
 
     </div>
