--- a/views/partials/researcher_side_nav.ejs
+++ b/views/partials/researcher_side_nav.ejs
@@ -7,9 +7,7 @@
             <li class="list-group-item"><a href="/researcher/tasks">My Task</a></li>
             <li class="list-group-item"><a href="/researcher/leads">My Leads</a></li>
             <li class="list-group-item"><a href="#" data-toggle="modal" data-target="#faqModal">FAQ</a></li>
-            <li class="list-group-item"><a class="dropdown-item" href="#">
-                Logout</a>
-            </a></li>
+            <li class="list-group-item"><a href="/login">Logout</a></a></li>
         </ul>
     </div>
 </div>
