--- a/views/partials/footer-scripts.ejs
+++ b/views/partials/footer-scripts.ejs
@@ -1,3 +1,6 @@
-<script src="/javascripts/jquery.js" defer=""></script>
+<script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
 <script src="/bootstrap/dist/js/bootstrap.js" defer=""></script>
 <script src="/javascripts/scripts.js" defer=""></script>
