--- a/public/stylesheets/less/_old_content.less
+++ b/public/stylesheets/less/_old_content.less
@@ -35,6 +35,18 @@
     }
 }
 
+.block-welcome-yt{
+    padding: 4% 0 10%;
+    background-size: 100%;
+    @media (min-width: 768px){
+        min-height: 690px;
+    }
+
+    @media (max-width: 768px){
+        padding: 0;
+    }
+}
+
 .block-welcome{
 
     background: url('/images/v2-assets/fold-curve-1v2.png'), transparent linear-gradient(246deg, #00C6FF 0%, #0072FF 100%) 0% 0% no-repeat padding-box;
