--- a/views/researcher/tasks.ejs
+++ b/views/researcher/tasks.ejs
@@ -33,7 +33,7 @@
                                     <div class="card-body">
                                         <h4 class="card-title"><span class="numLabel"><%=(key + 1)%></span><%=detail.task_name%><span class="task-status <%=detail.status%>"><%=detail.status%></span></h4>
                                         <p class="card-text"><%=detail.task_description%></p>
-                                        <a href="#" class="btn btn-primary">This Task</a>
+                                        <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#taskDescModal">This Task</a>
                                     </div>
                                 </div>
                             </li>
