--- a/views/partials/nav-common.ejs
+++ b/views/partials/nav-common.ejs
@@ -13,11 +13,11 @@
                     <a id="dropdownMenuButton1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#" class="dropdown-toggle">Registration </a> 
                     <div aria-labelledby="dropdownMenuButton1" class="dropdown-menu dropdown-menu-right">
                         <a href="/trademark-registration-in-united_states" class="dropdown-item">
-                            <img src="http://trademarkers.staging.test/images/countries/us.png">
+                            <img src="/images/countries/us.png">
                             United States
                         </a> 
                         <a href="/trademark-registration-in-taiwan" class="dropdown-item">
-                            <img src="http://trademarkers.staging.test/images/countries/tw.png">
+                            <img src="/images/countries/tw.png">
                             Taiwan
                         </a> 
                     </div>
