--- a/views/public/cookies.ejs
+++ b/views/public/cookies.ejs
@@ -1,57 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <%- include('../partials/head'); %>
-</head>
-<body >
+<div class="container">
+    <div class="row justify-content-center box-bg-container">
+        <div class="col-md-12 step-block">
+                    
+                    <p> If you use this website we will assume that you consent to our use of cookies for the purposes described in this website Cookie Policy and our Privacy Policy.</p>
 
-<header>
+                    <ol class="privacy-list">
+                        <li> Cookies and similar technologies
     
-    <%- include('../partials/header-default'); %>
-</header>
+                            <p> A cookie is a small text file which is placed onto your computer or electronic device when you access our website. Similar technologies include web beacons, action tags, local shared objects ('flash cookies') and single-pixel gifs. Such technologies can be used to track users' actions and activities, and to store information about them. We use these cookies and/or similar technologies on Trademarkers.com for the following purposes:</p>
+                            <ul class="theme-default">
+                                <li>For authentication, for maintaining your preferences and preventing you from needing to re-enter information you previously provided</li>
+                                <li>For helping you determine if you are logged into the site</li>
+                                <li>Maintaining the status of your items in the shopping cart</li>
+                                <li>For analyzing and taking your usage of our site</li>
+                                <li>For tracking Cookie Policy</li>
+                            </ul>
+                        </li>
 
-<main>
+                        <li>Information collected
+                            <p>The information we obtain from our use of cookies will not usually contain your personal data. While we may obtain information about your computer or any other electronic device which you use to access our website, such as your IP address, your browser and/or other internet log information, this information will not usually identify you personally.</p>
+                            <p>In certain circumstances we may also collect personal information about you but only where you voluntarily provide it (e.g. by completing an online form) or where you purchase goods or services from us.</p>
+                        </li>
 
-	<div class="container">
-		<div class="row justify-content-center box-bg-container">
-			<div class="col-md-6">
-						
-				<h2> About Trademarkers</h2>
-	
-				<p> Trademarkers is a leading international brand protection company that specializes in global trademark registration. Our accredited and internationally respected lawyers have helped numerous customers protect their brands and intellectual property worldwide.</p>
-	
-				<p> Our clients range from individuals who wish to protect one idea in one country, to intellectual property attorneys with multiple clients, to large businesses trademarking their brands throughout entire industries globally.</p>
-	
-			</div>
-	
-			<div class="col-md-6">
-						
-				<h2> Why Trademarkers?</h2>
-	
-				<p> We have a team of lawyers, with years of experience in Trademark Registrations, which allows us to assure you:</p>
-				<ul>
-					<li> Competent professionals will perform all necessary procedures for the registration of your trademark</li>
-	
-					<li> You will receive timely information regarding updates to the process from dedicated account representatives</li>
-	
-					<li> If objections arise in the registration process (opposition, refusal, etc.), knowledgeable lawyers will advise you on the appropriate course of action</li>
-	
-					<li> You can follow the interim status of your trademark in real­time, from application to registration, through a secure member’s section</li>
-	
-					<li> All information provided to us will be kept in absolute confidentiality ­ please view our confidentiality policy</li>
-				</ul>
-				  
-			</div>
-		</div>
-	</div>
+                        <li>Consent for cookies
+                            <p>There is a notice on our home page which describes how we use cookies and which also provides a link to our Privacy Policy. If you use this website after this notification has been displayed to you, we will assume that you consent to our use of cookies for the purposes described in this website Cookie Policy and our Privacy Policy.</p>
+                        </li>
 
+                        <li>How to turn off cookies
+                            <p>You can set your browser not to accept cookies and the websites below will tell you how to remove cookies from your browser. However, some of our website features may not function as a result.</p>
+                            <p>For further information on cookies generally visit aboutcookies.org.</p>
+                        </li>
 
-
-</main>
-
-<footer>
-    <%- include('../partials/footer'); %>
-</footer>
-
-</body>
-</html>
+                    </ol>
+                    
+        </div>
+    </div>
+</div>
