--- a/views/public/resources.ejs
+++ b/views/public/resources.ejs
@@ -1,57 +1,164 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <%- include('../partials/head'); %>
-</head>
-<body >
+<div class="container">
+    <div class="row justify-content-center box-bg-container">
+        <div class="col-md-12">
+                    
+                    <h2> The Trademark Filing Process</h2>
 
-<header>
-    
-    <%- include('../partials/header-default'); %>
-</header>
+                    <p> Trademark application process can be described in three simple steps.</p>
 
-<main>
+                    <div class="row resource-block">
+                        <div class="col-md-4">
+                            <h4><strong>Step 1:</strong> Preliminary Study</h4>
+                            <p>Although optional, it is beneficial to conduct a study of your target market prior to filing a trademark there. This provides information on the probability of successful registration, as well as details on competing brands and potential conflicts. Based on this information, you can make informed decisions for your trademark.</p>
+                        </div>
 
-	<div class="container">
-		<div class="row justify-content-center box-bg-container">
-			<div class="col-md-6">
-						
-				<h2> About Trademarkers</h2>
-	
-				<p> Trademarkers is a leading international brand protection company that specializes in global trademark registration. Our accredited and internationally respected lawyers have helped numerous customers protect their brands and intellectual property worldwide.</p>
-	
-				<p> Our clients range from individuals who wish to protect one idea in one country, to intellectual property attorneys with multiple clients, to large businesses trademarking their brands throughout entire industries globally.</p>
-	
-			</div>
-	
-			<div class="col-md-6">
-						
-				<h2> Why Trademarkers?</h2>
-	
-				<p> We have a team of lawyers, with years of experience in Trademark Registrations, which allows us to assure you:</p>
-				<ul>
-					<li> Competent professionals will perform all necessary procedures for the registration of your trademark</li>
-	
-					<li> You will receive timely information regarding updates to the process from dedicated account representatives</li>
-	
-					<li> If objections arise in the registration process (opposition, refusal, etc.), knowledgeable lawyers will advise you on the appropriate course of action</li>
-	
-					<li> You can follow the interim status of your trademark in real­time, from application to registration, through a secure member’s section</li>
-	
-					<li> All information provided to us will be kept in absolute confidentiality ­ please view our confidentiality policy</li>
-				</ul>
-				  
-			</div>
-		</div>
-	</div>
+                        <div class="col-md-4">
+                            <h4><strong>Step 2:</strong> Application & Registration</h4>
+                            <p>TradeMarkers manages the entire filing process with trademark authorities. We liaise between all parties, keeping you up-to-date on your application status. If any objections are raised against your trademark or if there are complications, you will be informed as soon as possible for consultation.</p>
+                        </div>
+
+                        <div class="col-md-4">
+                            <h4><strong>Step 3:</strong> Issuance & Monitoring</h4>
+                            <p> When your application is complete, we will deliver a certificate of registration along with all pertinent details. At this point, monitoring is recommended for protection against infringement and copycat branding. Our monitoring service regularly checks your target markets for trademark similarities and advises you if any are found.</p>
+                        </div>
+                    </div>
+                    
+                    <div class="accordion custom-card" id="accordionResources">
+
+                        <div class="card">
+                            <div class="card-header" id="headingOne">
+                            <h3 data-toggle="collapse" data-target="#acc1" aria-expanded="true" aria-controls="collapseOne">
+                                Which best describes your situation?
+                            </h3>
+                            </div>
+
+                            <div id="acc1" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionResources">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <h4>I want to get an idea of where I can use my trademark</h4>
+                                        <p> The first step towards attaining a trademark is to find out if it is available at all in your target regions. Some countries have readily available information on the internet for existing registrations, while others do not even have a website. A trademark study is the best way to get answers and identify opportunities to attain your trademark.</p>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <h4>I want a trademark registered in a specific country</h4>
+                                        <p> If your brand will be used in a single country and you have no plans to expand elsewhere, the simplest solution may be to attain a trademark in just that country. This tends to be a simpler and less expensive process than registering across multiple jurisdictions.</p>
+                                        <p> If your target country is part of a treaty region, it may make more sense to register with the relevant regional trademark authority. This allows for registration across multiple countries in a single application, often at only a small difference in cost. Major treaties include the European Union, Benelux, OAPI, and ARIPO. For more information, please see below.</p>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <h4>I plan to use my trademark in several specific countries</h4>
+                                        <p> If you need trademark protection in several countries, or if you plan to expand your brand later, there are several options:</p>
+                                        <ul>
+                                            <li> If your target countries do not share a common treaty region, you can register separately with each respective country’s trademark office</li>
+                                            <li> If the countries fall under a treaty, you can register with the treaty office</li>
+                                            <li> You can register under the Paris Convention, a treaty which covers most countries worldwide</li>
+                                        </ul>
+                                        <p> If you would like us to put together a quote, please contact us and give details – we will get back to you shortly.</p>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <h4>I need worldwide trademark protection</h4>
+                                        <p> For brands requiring global registration, the best option can be to file with the office of the Paris Convention. This office covers most countries worldwide. While individual countries reserve the right to accept or reject your application, the administrative process is made much easier using this system.</p>
+                                        <p> If you require worldwide brand protection, we would like to hear the specifics and consult you on choosing the best option for your situation. Please contact us and outline your trademark needs. One of our representatives will reply shortly.</p>
+                                    </div>
+                                </div>
+                                
+                            </div>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-header" id="headingTwo">
+                                <h3 data-toggle="collapse" data-target="#acc2" aria-expanded="false" aria-controls="collapseOne">
+                                    What are Treaty Regions?
+                                </h3>
+                            </div>
+                            <div id="acc2" class="collapse" aria-labelledby="headingOne" data-parent="#accordionResources">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <p> Treaty regions are formed by certain countries which share a common language, geography, or economy. These allow trademarks to be registered across all member countries in a single application. Registration under a treaty is typically more simple than applying in multiple countries individually, and it allows for broader protection of trademarks.</p>
+
+                                        <p> Some treaty regions include:</p>
+
+                                        <ul class="theme-default">
+                                            <li> <a href="/country/EM" target="_blank">European Union</a></li>
+                                            <li> <a href="/country/BX" target="_blank">Benelux – Belgium, Luxembourg, Netherlands</a></li>
+                                            <li> <a href="/country/OAPI" target="_blank">OAPI – select French-speaking African countries</a></li>
+                                            <li> <a href="/country/ARIPO" target="_blank">ARIPO – select English-speaking African countries</a></li>
+                                        </ul>
+
+                                        
+                                    </div>
+                                    
+                                    <div class="col-md-6">
+                                        <p> Countries which recognize the Paris Convention are also considered a treaty region. This system, administered by the Paris Convention, allows for a single, streamlined application for multiple countries. Although very convenient, it is not a universal solution for worldwide trademark filing. Your trademark may face oppositions in certain countries, and individual trademark offices ultimately reserve the right to accept or reject applications at their own discretion.</p>
+
+                                    </div>
+
+                                </div>
+                                
+                            </div>
+                            </div>
+                        </div>
 
 
+                        <div class="card">
+                            <div class="card-header" id="heading3">
+                                <h3 data-toggle="collapse" data-target="#acc3" aria-expanded="false" aria-controls="collapseOne">
+                                    What is Priority Filing?
+                                </h3>
+                            </div>
+                            <div id="acc3" class="collapse" aria-labelledby="headingOne" data-parent="#accordionResources">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <p> Priority filing <i>(also known as priority right or right of priority)</i> is the time-limited right of the owner of a trademark to file subsequent applications in other jurisdictions for the same trademark. To claim this right, the subsequent applications must be filed within six months (not twelve months, as in the case of patents) of the submission date of the initial application. Priority filing applies only to countries which are members of the Paris Convention.</p>
+                                        <p> For example, a company may want to file a trademark in Germany and Canada. An application is made to Germany on January 1st, giving the applicant first priority across Paris Convention until June 30th. As long as the Canadian application is made by June 30th, it claims priority.</p>
 
-</main>
+                                    </div>
+                                    
+                                    <div class="col-md-6">
+                                        <p> It is highly recommended that subsequent applications be filed as soon as possible. Certain countries have requirements for claiming priority, and arranging the necessary documentation can take time.</p>
+                                    </div>
 
-<footer>
-    <%- include('../partials/footer'); %>
-</footer>
+                                </div>
+                                
+                            </div>
+                            </div>
+                        </div>
 
-</body>
-</html>
+                        <div class="card">
+                            <div class="card-header" id="heading4">
+                                <h3 data-toggle="collapse" data-target="#acc4" aria-expanded="false" aria-controls="collapseOne">
+                                    What are Trademark Classes?
+                                </h3>
+                            </div>
+                            <div id="acc4" class="collapse" aria-labelledby="headingOne" data-parent="#accordionResources">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <p> Trademarks are classified under categories of goods and services. Known as “Nice Classification”, there are 45 classes <b>(1 to 34 for goods and 35 to 45 for services)</b> which are recognized by nearly every jurisdiction in the world. In most countries, your trademark may fall under multiple classes; however, in a few countries you are limited to one class per trademark.</p>
+                                        <p> Your trademark will only be protected under those classes which you specify at the time of application. To help you decide which classes best fit your trademark, please see the below dropdown list.</p>
+                                        <p> <a href="/classes" target="_blank">Click here to browse trademark class descriptions.</a></p>
+                                        
+                                    </div>
+                                    
+                                    <div class="col-md-6">
+                                        <p> <a href="/classes" target="_blank">Or feel free to use our very own Nice Classification search tool to find what products fit within which classes.</a></p>
+                                    </div>
+
+                                </div>
+                                
+                            </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+
+                    
+        </div>
+    </div>
+</div>
