--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,11 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<div class="container">
+	<div class="row justify-content-center box-bg-container">
+		<div class="col-md-12">
+
+            <h1><%= message %></h1>
+            <h2><%= error.status %></h2>
+            <pre><%= error.stack %></pre>
+
+        </div>
+    </div>
+</div>
