--- a/views/partials/nav-common.ejs
+++ b/views/partials/nav-common.ejs
@@ -13,13 +13,39 @@
                     <a id="dropdownMenuButton1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#" class="dropdown-toggle">Registration </a> 
                     <div aria-labelledby="dropdownMenuButton1" class="dropdown-menu dropdown-menu-right">
                         <a href="/trademark-registration-in-united_states" class="dropdown-item">
-                            <img src="/images/countries/us.png">
-                            United States
+                            <img src="/images/countries/us.png">United States
                         </a> 
                         <a href="/trademark-registration-in-taiwan" class="dropdown-item">
-                            <img src="/images/countries/tw.png">
-                            Taiwan
+                            <img src="/images/countries/tw.png">Taiwan
                         </a> 
+                        <a href="/trademark-registration-in-singapore" class="dropdown-item">
+                            <img src="/images/countries/sg.png">Singapore
+                        </a> 
+                        <a href="/trademark-registration-in-philippines" class="dropdown-item">
+                            <img src="/images/countries/ph.png">Philippines
+                        </a> 
+                        <a href="/trademark-registration-in-hong_kong" class="dropdown-item">
+                            <img src="/images/countries/hk.png">Hong Kong
+                        </a> 
+                        <a href="/trademark-registration-in-european_union" class="dropdown-item">
+                            <img src="/images/countries/em.png">European Union
+                        </a> 
+                        <a href="/trademark-registration-in-china" class="dropdown-item">
+                            <img src="http://trademarkers.staging.test/images/countries/cn.png">China
+                        </a> 
+                        <a href="/trademark-registration-in-canada" class="dropdown-item">
+                            <img src="/images/countries/ca.png">Canada
+                        </a> 
+                        <hr> 
+                        <a href="/countries" class="dropdown-item"> All Countries</a> 
+                        <a href="/region/AF" class="dropdown-item">Africa</a> 
+                        <a href="/region/AS" class="dropdown-item">Asia</a> 
+                        <a href="/region/CA" class="dropdown-item">Central America</a> 
+                        <a href="/region/EU" class="dropdown-item">Europe</a>
+                        <a href="/region/ME" class="dropdown-item">Middle East</a> 
+                        <a href="/region/NA" class="dropdown-item">North America</a> 
+                        <a href="/region/OC" class="dropdown-item">Oceania</a> 
+                        <a href="/region/SA" class="dropdown-item">South America</a>
                     </div>
                 </div>
             </li> 
