--- a/views/public/classes.ejs
+++ b/views/public/classes.ejs
@@ -1,57 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <%- include('../partials/head'); %>
-</head>
-<body >
+<div class="container">
+	<div class="row justify-content-center box-bg-container">
+		<div class="col-md-12">
+					
+			<h2>Classes</h2>
 
-<header>
-    
-    <%- include('../partials/header-default'); %>
-</header>
-
-<main>
-
-	<div class="container">
-		<div class="row justify-content-center box-bg-container">
-			<div class="col-md-6">
-						
-				<h2> About Trademarkers</h2>
-	
-				<p> Trademarkers is a leading international brand protection company that specializes in global trademark registration. Our accredited and internationally respected lawyers have helped numerous customers protect their brands and intellectual property worldwide.</p>
-	
-				<p> Our clients range from individuals who wish to protect one idea in one country, to intellectual property attorneys with multiple clients, to large businesses trademarking their brands throughout entire industries globally.</p>
-	
-			</div>
-	
-			<div class="col-md-6">
-						
-				<h2> Why Trademarkers?</h2>
-	
-				<p> We have a team of lawyers, with years of experience in Trademark Registrations, which allows us to assure you:</p>
-				<ul>
-					<li> Competent professionals will perform all necessary procedures for the registration of your trademark</li>
-	
-					<li> You will receive timely information regarding updates to the process from dedicated account representatives</li>
-	
-					<li> If objections arise in the registration process (opposition, refusal, etc.), knowledgeable lawyers will advise you on the appropriate course of action</li>
-	
-					<li> You can follow the interim status of your trademark in real­time, from application to registration, through a secure member’s section</li>
-	
-					<li> All information provided to us will be kept in absolute confidentiality ­ please view our confidentiality policy</li>
-				</ul>
-				  
-			</div>
+			<p> on-going</p>
 		</div>
+
 	</div>
-
-
-
-</main>
-
-<footer>
-    <%- include('../partials/footer'); %>
-</footer>
-
-</body>
-</html>
+</div>
